--- a/config/config.ini
+++ b/config/config.ini
@@ -1,1 +1,16 @@
-
+[GENERAL]
+lists = ../../lists
+delimiter = ;
+[HPE]
+[MIKROTIK]
+save_location = T:\Backup
+folder_name = Backup
+[PATTON]
+[LDAP]
+ldap_server = 
+ldap_user = 
+ldap_password = 
+base_dn = 
+search_filter = 
+file_name = 
+[SMTP]
