--- a/config/config.ini
+++ b/config/config.ini
@@ -6,6 +6,8 @@ delimiter = ;
 save_location = T:\Backup
 folder_name = Backup
 [PATTON]
+save_location = T:\Backup
+folder_name = Backup
 [LDAP]
 ldap_server = 
 ldap_user = 
