--- a/config/config.ini
+++ b/config/config.ini
@@ -1,13 +1,16 @@
 [GENERAL]
-lists = ../../lists
+list_location = ../../lists
 delimiter = ;
 [HPE]
 [MIKROTIK]
+list_name = mikrotik.csv
 save_location = T:\Backup
 folder_name = Backup
 [PATTON]
+list_name = patton.csv
 save_location = T:\Backup
 folder_name = Backup
+bytes_recv = 48000
 [LDAP]
 ldap_server = 
 ldap_user = 
