--- a/config/config.ini
+++ b/config/config.ini
@@ -1,21 +1,7 @@
 [GENERAL]
-list_location = ../../lists
 delimiter = ;
-[HPE]
 [MIKROTIK]
-list_name = mikrotik.csv
-save_location = T:\Backup
-folder_name = Backup
-[PATTON]
-list_name = patton.csv
-save_location = T:\Backup
-folder_name = Backup
-bytes_recv = 48000
-[LDAP]
-ldap_server = 
-ldap_user = 
-ldap_password = 
-base_dn = 
-search_filter = 
-file_name = 
+list_file = ./lists/template.csv
+outlocation = C:\Users\Simon\Documents\Test
+outfolder = Backup-Mikrotik
 [SMTP]
