--- a/config/config.ini
+++ b/config/config.ini
@@ -2,6 +2,6 @@
 delimiter = ;
 [MIKROTIK]
 list_file = ./lists/template.csv
-outlocation = C:\Users\Simon\Documents\Test
+outlocation = C:\Users\adminLokal\Documents\Test
 outfolder = Backup-Mikrotik
 [SMTP]
